tests/ui/async-await/issue-61949-self-return-type.stderr
error[E0658]: `async fn` return type cannot contain a projection or `Self` that references lifetimes from a parent scope
  --> $DIR/issue-61949-self-return-type.rs:11:40
   |
LL |     pub async fn new(_bar: &'a i32) -> Self {
   |                                        ^^^^ help: consider spelling out the type instead: `Foo<'a>`
   |
   = note: see issue #103532 <https://github.com/rust-lang/rust/issues/103532> for more information
   = help: add `#![feature(impl_trait_projections)]` to the crate attributes to enable

error[E0597]: `bar` does not live long enough
  --> $DIR/issue-61949-self-return-type.rs:22:18
   |
LL |     let x = {
   |         - borrow later stored here
LL |         let bar = 22;
   |             --- binding `bar` declared here
LL |         Foo::new(&bar).await
   |                  ^^^^ borrowed value does not live long enough
LL |
LL |     };
   |     - `bar` dropped here while still borrowed

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0597, E0658.
For more information about an error, try `rustc --explain E0597`.
